--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^3.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
