--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "draggabilly": "^2.2.0",
     "element-ui": "^2.4.4",
+    "jquery-bridget": "^2.0.1",
     "less": "^3.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
