--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jquery-bridget": "^2.0.1",
     "less": "^3.0.4",
     "vue": "^2.5.2",
+    "vue-color": "^2.7.0",
     "vue-router": "^3.0.1",
+    "vue-scroll": "^2.1.9",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
